Tue Jan 25 07:48:22 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_thread.rb: remove unused variables.

Tue Jan 25 07:45:44 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_thread.rb (TestThread#test_condvar_nolock_2): get
	  rid of method redefined.

Tue Jan 25 03:24:28 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_thread.rb: Added various ConditionVariable tests.

Mon Jan 24 21:04:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_invalid_str): prevent intermediate variable from GC.
	  [ruby-core:34820]

Sat Jan 22 11:21:40 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): fixing off-by-one error on line numbers
	  in parse exceptions.  [ruby-core:34690]

	* test/psych/test_parser.rb: test for error

Wed Jan 19 13:04:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* proc.c (proc_call): Add gc guard to avoid segfault. The fix
	  is created by Tomoyuki Chikanaga. [Bug #4238][ruby-dev:42963]

Tue Jan 18 23:31:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y: avoid NULL reference.  [ruby-dev:43067]

Wed Jan 19 02:54:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* vsnprintf.c (cvt): set first byte of buf to NUL for the case when
	  no bytes are written to the buf. [ruby-dev:43062]

Tue Jan 18 02:46:55 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/json_tree.rb (visit_String): JSON
	  strings should be dumped with double quotes. [ruby-core:34186]

	* test/psych/test_json_tree.rb: test for double quotes

Sun Jan 16 22:06:30 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* too/rbinstall.rb (install?(:ext, :comm, :gem)): no longer 
	  installs no-versioned gempsecs. [ruby-core:34011]
	  Patch by Luis Lavena.

Fri Jan 14 15:32:29 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: call neither logout nor disconnect
	  unless connected.  patch by Kazuhiro NISHIYAMA.  [ruby-dev:42860]
